# test-app/src/routes/resourceRoutes.js
@@ -4,6 +4,7 @@ const resourceController = require('../controllers/resourceController');
 const validateAddResourceSchema = require('../middleware/validateAddResourceRequest');
 const validateResourceListSchema = require('../middleware/validateResourceListRequest');
 const validateDeleteResourceSchema = require('../middleware/validateDeleteResourceRequest');
+const validateResourceDetailSchema = require('../middleware/validateResourceDetailRequest');
 
 // Add resource to a deal
 router.post('/add', validateAddResourceSchema, resourceController.addResource);
@@ -15,10 +16,18 @@ router.post(
   resourceController.listResources
 );
 
+// Get resource detail from deal
+router.get(
+  '/detail',
+  validateResourceDetailSchema,
+  resourceController.getResourceDetail
+);
+
 // Delete resource from particular stage of a deal
 router.delete(
   '/:resourceId/stages/:stageId/deals/:dealId',
   validateDeleteResourceSchema,
   resourceController.deleteResource
 );
+
 module.exports = router;
